# Snippet

./: .gitignore  CMakeLists.txt  CREDITS  LICENSE  README.md  TODO.md  project.godot  todo.txt
Assets/: Main.tscn  Startup.tscn
Assets/Fonts/Roboto/Regular/: Roboto-Regular-12.tres  Roboto-Regular-14.tres  Roboto-Regular-16.tres  Roboto-Regular-24.tres
Assets/Resources/: LuaSyntaxColor.tres
Assets/Resources/Icons/: Icons.icns  icon.kra  icon.png.import  icon_1024.png.import  icon_64.png.import
Assets/Scenes/Graph/: Pin.tscn  PinConnection.tscn  Snippet.tscn  SnippetGraph.tscn  Workspace.tscn
Assets/Scenes/Language/: Runtime.tscn  VirtualMachine.tscn
Assets/Scenes/UI/: FloatingWindow.tscn  MenuBar.tscn  Popups.tscn  UI.tscn  UIFactory.tscn
Assets/Scenes/UI/Controls/: AutoComplete.tscn  OutputText.tscn  StatusBar.tscn
Assets/Scenes/UI/Docks/: BottomDock.tscn
Assets/Scenes/UI/Popups/: AboutDialog.tscn  FileExplorer.tscn  MessageBox.tscn  VariableInspector.tscn
Assets/Scenes/UI/Snippet/: BaseTextEdit.tscn  SnippetTextEdit.tscn  SnippetToolbar.tscn  SnippetWindow.tscn  SnippetWindowTabs.tscn  UnitTestEdit.tscn  UnitTestTextEdit.tscn
Assets/Scripts/: Log.gd  Main.gd  Startup.gd  Utility.gd
Assets/Scripts/Components/: Background2D.gd  DynamicSizer.gd  Label2D.gd
Assets/Scripts/Graph/: ConnectionManager.gd  Pin.gd  PinConnection.gd  Snippet.gd  SnippetGraph.gd  Workspace.gd
Assets/Scripts/Language/: ColorRegion.gd  Debugger.gd  DebuggerClient.gd  Parser.gd  ParserResult.gd  Runtime.gd  RuntimeTask.gd  RuntimeTask_Compile.gd  RuntimeTask_Run.gd  RuntimeTask_RunUT.gd  SyntaxColor.gd  Variable.gd  VirtualMachine.gd
Assets/Scripts/Serialization/: AppSettings.gd  SnippetData.gd  Workspace.gd
Assets/Scripts/UI/: FloatingWindow.gd  Popups.gd  UI.gd  UIFactory.gd
Assets/Scripts/UI/Controls/: AutoComplete.gd  BaseTextEdit.gd  OutputText.gd  StatusBar.gd
Assets/Scripts/UI/Docks/: BottomDock.gd
Assets/Scripts/UI/MenuBar/: FileMenu.gd  SettingsMenu.gd  TextureButtonMenu.gd
Assets/Scripts/UI/Menus/: BasePopupMenu.gd  GraphPopupMenu.gd  SnippetPopupMenu.gd
Assets/Scripts/UI/Popups/: AboutDialog.gd  FileExplorer.gd  MessageBox.gd  VariableInspector.gd
Assets/Scripts/UI/Snippet/: SnippetTextEdit.gd  SnippetToolbar.gd  SnippetWindow.gd  UnitTestTextEdit.gd
Assets/Textures/: Close.png.import  File.png.import  Gear.png.import  Icons_Large.png.import  Pins.png.import  Play.png.import  PlayUT.png.import  Resume.png.import  Stop.png.import
Libraries/Snippet/: Snippet.gdnlib
Libraries/Snippet/Classes/: LuaCompileResult.gdns  LuaError.gdns  LuaResult.gdns  LuaStackTrace.gdns  LuaStackTraceElement.gdns  LuaVM.gdns  SnippetStub.gdns
Libraries/Snippet/Mac/x64/: libSnippet.dylib
Native/: CMakeLists.txt
Native/Lua/: CMakeLists.txt
Native/Snippet/: CMakeLists.txt  Main.cpp  SnippetStub.cpp  SnippetStub.h
Native/Snippet/Lua/: CMakeLists.txt  LuaCompileResult.cpp  LuaCompileResult.h  LuaError.cpp  LuaError.h  LuaHelpers.cpp  LuaHelpers.h  LuaLibs.cpp  LuaLibs.h  LuaResult.cpp  LuaResult.h  LuaStackTrace.cpp  LuaStackTrace.h  LuaStackTraceElement.cpp  LuaStackTraceElement.h  LuaVM.cpp  LuaVM.h  LuaVMDebugger.cpp  LuaVMDebugger.h
Native/godot-cpp/include/core/: Math.hpp
Scripts/: Build.bat  Build.sh  Clean.bat  Clean.sh  Defines.bat  Defines.sh
Source/: CMakeLists.txt
Source/Client/: CMakeLists.txt  Main.cpp
Source/Client/Controls/: Canvas.cpp  Canvas.h  ConnectionButton.cpp  ConnectionButton.h  Document.cpp  Document.h  Node.cpp  Node.h
Source/Common/: ConnectionStatus.h
Source/Server/: CMakeLists.txt  Main.cpp
