set(HEADERS
	${CMAKE_CURRENT_SOURCE_DIR}/lapi.h
	${CMAKE_CURRENT_SOURCE_DIR}/lauxlib.h
	${CMAKE_CURRENT_SOURCE_DIR}/lcode.h
	${CMAKE_CURRENT_SOURCE_DIR}/lctype.h
	${CMAKE_CURRENT_SOURCE_DIR}/ldebug.h
	${CMAKE_CURRENT_SOURCE_DIR}/ldo.h
	${CMAKE_CURRENT_SOURCE_DIR}/lfunc.h
	${CMAKE_CURRENT_SOURCE_DIR}/lgc.h
	${CMAKE_CURRENT_SOURCE_DIR}/llex.h
	${CMAKE_CURRENT_SOURCE_DIR}/llimits.h
	${CMAKE_CURRENT_SOURCE_DIR}/lmem.h
	${CMAKE_CURRENT_SOURCE_DIR}/lobject.h
	${CMAKE_CURRENT_SOURCE_DIR}/lopcodes.h
	${CMAKE_CURRENT_SOURCE_DIR}/lparser.h
	${CMAKE_CURRENT_SOURCE_DIR}/lparser.h
	${CMAKE_CURRENT_SOURCE_DIR}/lprefix.h
	${CMAKE_CURRENT_SOURCE_DIR}/lstate.h
	${CMAKE_CURRENT_SOURCE_DIR}/lstring.h
	${CMAKE_CURRENT_SOURCE_DIR}/ltable.h
	${CMAKE_CURRENT_SOURCE_DIR}/ltm.h
	${CMAKE_CURRENT_SOURCE_DIR}/lua.h
	${CMAKE_CURRENT_SOURCE_DIR}/luaconf.h
	${CMAKE_CURRENT_SOURCE_DIR}/lualib.h
	${CMAKE_CURRENT_SOURCE_DIR}/lundump.h
	${CMAKE_CURRENT_SOURCE_DIR}/lvm.h
	${CMAKE_CURRENT_SOURCE_DIR}/lzio.h
)

set(SOURCE
	${CMAKE_CURRENT_SOURCE_DIR}/lapi.c
	${CMAKE_CURRENT_SOURCE_DIR}/lauxlib.c
	${CMAKE_CURRENT_SOURCE_DIR}/lbaselib.c
	${CMAKE_CURRENT_SOURCE_DIR}/lbitlib.c
	${CMAKE_CURRENT_SOURCE_DIR}/lcode.c
	${CMAKE_CURRENT_SOURCE_DIR}/lcorolib.c
	${CMAKE_CURRENT_SOURCE_DIR}/lctype.c
	${CMAKE_CURRENT_SOURCE_DIR}/ldblib.c
	${CMAKE_CURRENT_SOURCE_DIR}/ldebug.c
	${CMAKE_CURRENT_SOURCE_DIR}/ldo.c
	${CMAKE_CURRENT_SOURCE_DIR}/ldump.c
	${CMAKE_CURRENT_SOURCE_DIR}/lfunc.c
	${CMAKE_CURRENT_SOURCE_DIR}/lgc.c
	${CMAKE_CURRENT_SOURCE_DIR}/linit.c
	${CMAKE_CURRENT_SOURCE_DIR}/liolib.c
	${CMAKE_CURRENT_SOURCE_DIR}/llex.c
	${CMAKE_CURRENT_SOURCE_DIR}/lmathlib.c
	${CMAKE_CURRENT_SOURCE_DIR}/lmem.c
	${CMAKE_CURRENT_SOURCE_DIR}/loadlib.c
	${CMAKE_CURRENT_SOURCE_DIR}/lobject.c
	${CMAKE_CURRENT_SOURCE_DIR}/lopcodes.c
	${CMAKE_CURRENT_SOURCE_DIR}/loslib.c
	${CMAKE_CURRENT_SOURCE_DIR}/lparser.c
	${CMAKE_CURRENT_SOURCE_DIR}/lstate.c
	${CMAKE_CURRENT_SOURCE_DIR}/lstring.c
	${CMAKE_CURRENT_SOURCE_DIR}/lstrlib.c
	${CMAKE_CURRENT_SOURCE_DIR}/ltable.c
	${CMAKE_CURRENT_SOURCE_DIR}/ltablib.c
	${CMAKE_CURRENT_SOURCE_DIR}/ltm.c
	${CMAKE_CURRENT_SOURCE_DIR}/luac.c
	${CMAKE_CURRENT_SOURCE_DIR}/lundump.c
	${CMAKE_CURRENT_SOURCE_DIR}/lutf8lib.c
	${CMAKE_CURRENT_SOURCE_DIR}/lvm.c
	${CMAKE_CURRENT_SOURCE_DIR}/lzio.c
)

add_library(Lua ${SOURCE} ${HEADERS})
